# CRA-common-project

./: README.md  pyproject.toml  pytest.ini
mission1/src/: attendance.py
mission1/test/: test_golden.py
mission2/src/: main.py  strategies.py  type.py  user.py
mission2/test/: conftest.py  test_golden.py  test_strategies.py  test_user.py
